infra/k8s/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
  labels:
    app: expiration
spec:
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: kodega2016/ticketing_expiration
          imagePullPolicy: IfNotPresent
