infra/k8s/auth-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-db-deployment
  labels:
    app: auth-mongo-db
spec:
  selector:
    matchLabels:
      app: auth-mongo-db
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-mongo-db
    spec:
      containers:
        - name: auth-mongo-db
          image: mongo
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-db-clusterip-service
spec:
  selector:
    app: auth-mongo-db
  type: ClusterIP
  ports:
    - name: auth-mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
