infra/k8s/client-deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: kodega2016/ticketing_client
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
