infra/k8s/orders-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-deployment
  labels:
    app: orders-mongo
spec:
  selector:
    matchLabels:
      app: orders-mongo
  replicas: 1
  strategy:
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-clusterip-service
spec:
  selector:
    app: orders-mongo
  type: ClusterIP
  ports:
    - name: orders-mongo-clusterip-service
      protocol: TCP
      port: 27017
      targetPort: 27017
