infra/k8s/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
  labels:
    app: payments
spec:
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: kodega2016/ticketing_payments
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: payments-clusterip-service
spec:
  selector:
    app: payments
  type: ClusterIP
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
