infra/k8s/payments-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-deployment
  labels:
    app: payments-mongo
spec:
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-db-clusterip-service
spec:
  selector:
    app: payments-mongo
  type: ClusterIP
  ports:
    - name: payments-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
