infra/k8s/tickets-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-deployments
  labels:
    app: tickets-mongo
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-clusterip-service
  namespace: default
spec:
  selector:
    app: tickets-mongo
  type: ClusterIP
  ports:
    - name: tickets-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
